# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-02 18:19:18 GMT	John Goerzen <jgoerzen@complete.org>	patch-192

    Summary:
      Now test FiniteMap
    Revision:
      missingh--head--0.7--patch-192


    modified files:
     ChangeLog


2005-02-02 17:18:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-191

    Summary:
      Finished tests for AnyDBM
    Revision:
      missingh--head--0.7--patch-191


    modified files:
     ChangeLog testsrc/AnyDBMtest.hs


2005-02-02 17:05:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-190

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-190


    new files:
     testsrc/tmp/.arch-ids/=id

    modified files:
     ChangeLog Makefile libsrc/MissingH/AnyDBM/StringDBM.hs
     testsrc/AnyDBMtest.hs

    new directories:
     testsrc/tmp testsrc/tmp/.arch-ids


2005-02-02 16:47:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-189

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-189


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs
     libsrc/MissingH/IO/HVFS.hs testsrc/AnyDBMtest.hs


2005-02-02 16:31:52 GMT	John Goerzen <jgoerzen@complete.org>	patch-188

    Summary:
      Checkpointing AnyDBM testing
    Revision:
      missingh--head--0.7--patch-188


    new files:
     testsrc/AnyDBMtest.hs

    modified files:
     ChangeLog libsrc/MissingH/AnyDBM.hs testsrc/Tests.hs


2005-02-02 04:03:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-187

    Summary:
      checkpointing
    Revision:
      missingh--head--0.7--patch-187


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs


2005-02-01 23:00:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-186

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-186


    modified files:
     ChangeLog libsrc/MissingH/AnyDBM/StringDBM.hs